Fixing list not showing properly on old iphones

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -482,6 +482,7 @@ input[name="theme-toggle"] {
   width: 100%;
   height: 100%;
   li {
+    background-color: #3c3c3c;
     background-color: var(--background-cards);
     margin-bottom: 0.25rem;
     padding: 0.75rem;
